commit LOV Service SEQ Service
edit UserService

--- a/workspace/ims-client/src/app/buckwaframework/project/pages/userManagement/userManagement-detail.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/userManagement/userManagement-detail.html
@@ -57,6 +57,14 @@
                             <label>Enabled</label>
                         </div>
                     </div>
+                    <div class="three wide field">
+                        <label>ภาค</label>
+                        <div id="sectorSelectOption" class="ui checkbox">
+                            <select class="ui dropdown" id="selectSector" name="sector" >
+                                <option></option>
+                            </select>
+                        </div>
+                    </div>
                 </div>
                 <div class="fields">
                     <div class="sixteen wide field">
