--- a/workspace/ims-client/src/app/buckwaframework/project/pages/userManagement/userManagement.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/userManagement/userManagement.html
@@ -90,6 +90,7 @@
                     <tr>
                         <th></th>
                         <th>Username</th>
+                        <th>sector</th>
                         <th>Enabled</th>
                         <th>Account Non Expired</th>
                         <th>Credentials Non Expired</th>
