--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/add-data/add-data.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/add-data/add-data.component.html
@@ -185,20 +185,27 @@
           </div>
           <div class="inline fields" *ngFor="let f of excise.file; let i = index">
             <div class="one wide field"></div>
-            <div class="nine wide field" *ngIf="hasFile(f.name); then thenBlock; else elseBlock"></div>
+            <div class="nine wide field" *ngIf="f.uploadPath === undefined; then thenBlock; else elseBlock"></div>
             <ng-template #thenBlock>
               <div class="nine wide field">
                 <label class="custom-label-w-15">ไฟล์</label>
-                <input type="file" (change)="readUrl($event, i)" accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel,.doc,.docx"
-              required>
+                <input type="file" (change)="readUrl($event, i)"
+                  ngValue="f.value"
+                  accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel,.doc,.docx"
+                required>
               </div>
             </ng-template>
             <ng-template #elseBlock>
               <div class="nine wide field">
-                <label class="custom-label-w-15">ไฟล์ : {{f.type}}</label>
+                <label class="custom-label-w-15">ไฟล์</label>
+                <input type="text" value="{{f.uploadPath.split('/')[3]}}" disabled>
               </div>
             </ng-template>
-            <div class="one wide field">
+            <div class="two wide field">
+              <a class="custom-btn success"
+                *ngIf="f.uploadPath !== undefined"
+                onclick="alert('ยังไม่สามารถดาวน์โหลดได้ในขณะนี้....')"
+                >ดาวน์โหลด</a>
               <a class="custom-btn danger" (click)="removeFileInput()" *ngIf="i == excise.file.length-1">ลบ</a>
             </div>
           </div>
