--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2.component.html
@@ -1,3 +1,285 @@
-<p>
-  int09-2 works!
-</p>
+<div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+  <span> สัญญาการยืมเงิน</span>
+</div>
+
+<div class="ui attached  segment">
+    <div class="ui right aligned grid">
+        <div class="sixteen wide column">
+          <button class="ui mini primary button">           
+            Export
+          </button>           
+        </div>
+      </div>
+  <div class="ui grid center aligned">
+
+    <div class="ui one wide column">&nbsp;</div>
+    <div class="ui center aligned thirteen wide  column">
+      <div class="ui form center aligned">
+
+        <div class="inline fields">
+          <div class="two wide field">
+            <label>ยื่นต่อ :</label>
+          </div>
+          <div class="seven wide field">
+            <input type="text">
+          </div>
+          <div class="two wide field">
+            <label>
+              เลขที่ :
+            </label>
+          </div>
+          <div class="four  wide field">
+            <input type="text">
+          </div>
+        </div>
+        <div class="inline fields">
+          <div class="nine  wide field"></div>
+          <div class="two wide field">
+            <label>
+              วันครบกำหนด :
+            </label>
+          </div>
+          <div class="four  wide field">
+            <input type="text">
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="two wide field">
+            <label>ข้าพเจ้า :</label>
+          </div>
+          <div class="three wide field">
+            <input type="text">
+          </div>
+          <div class="two wide field">
+            <label>
+              ตำแหน่ง :
+            </label>
+          </div>
+          <div class="three wide field">
+            <input type="text" class="disabled">
+          </div>
+          <div class="two wide field">
+            <label>
+              สังกัด :
+            </label>
+          </div>
+          <div class="three wide field">
+            <input type="text" class="disabled">
+          </div>
+        </div>
+        <div class="inline fields">
+          <div class="four wide field">
+            <label>มีความประสงค์ขอยืมเงินจาก :</label>
+          </div>
+          <div class="eleven wide field">
+            <input type="text" class="disabled">
+          </div>
+        </div>
+        <div class="inline fields">
+          <div class="nine wide field">
+            <label>
+              เพื่อเป็นค่าใช้จ่ายในการเดินทางไปราชการเพื่อ :
+            </label>
+          </div>
+        </div>
+        <div class="inline fields">
+          <div class="fifteen wide field">
+            <textarea name="" id="" rows="2" style="resize: none" ></textarea>
+          </div>
+        </div>
+        <div class="inline fields">
+          <div class="nine wide field">
+            <label>
+              ดังรายละเอียดต่อไปนี้ :
+            </label>
+          </div>
+        </div>
+        <div class="ui nine column grid">
+          <div class="column" style="width: 18%;">
+            <br>- ค่าเบี้ยเลี้ยง
+            <br>- ค่าที่พัก
+            <br>- ค่าพาหนะ
+            <br>- ค่าใช้จ่ายอื่น
+          </div>
+          <div class="nine wide field"></div>
+          <div class="column" style="width: 20%;">
+            <br> 26,220.00
+            <br> 83,600.00
+            <br> 12,550.00
+            <br> 230.00
+          </div>
+        </div>
+        <br>
+        <div class="inline fields">
+          <div class="eight wide field">
+            <label class="custom-label-w-16" style="width: 17% !important;">(ตัวอักษร</label>
+            <input type="text" style="width: 100%">
+            <label></label>
+          </div>
+          <div class="two wide field">
+            <label>)&nbsp; รวมเงิน (บาท)</label>
+          </div>
+          <div class="three wide field"></div>
+          <div class="two wide field">
+            122,600.00
+          </div>
+        </div>
+        <br>
+        <div class="inline fields">
+          <div class="sixteen wide field">
+            ข้าพเจ้าสัญญาว่าจะปฏิบัติตามระเบียบของทางราชการทุกประการ และจะนำใบสำคัญคู่จ่ายที่ถูกต้อง พร้อมทั้งเงินเหลือจ่าย (ถ้ามี) ส่งภายในกำหนดไว้ใน</div>
+        </div>
+        <div class="inline fields">
+          <div class="five wide field">
+            ระเบียบการจ่ายเงินจากคลัง คือภายใน
+          </div>
+          <div class="four wide field">
+            <input type="text" name="">
+          </div>
+          <p> วัน นับแต่วันที่เดินทางกลับมาถึง ถ้าข้าพเจ้าไม่ส่งตามกำหนด</p>
+        </div>
+        <div class="inline fields">
+          ข้าพเจ้ายินยอมให้หักเงินเดือน ค่าจ้าง เบี้ยหวัด บำเหน็จ บำนาญ หรือเงินอื่นใดที่ข้าพเจ้าพึงได้รับจากทางราชการ ชดใช้จำนวนเงินที่ยืมไปจนครบถ้วนได้ทันที
+        </div>
+        <div class="inline fields">
+          <div class="one wide field"></div>
+          <div class="six wide field">
+            <label>ลายมือชื่อ...............................................................ผู้ยืม</label>
+          </div>
+          <div class="eight wide field">
+            <label class="custom-label-w-16" style="width: 17% !important;">วันที่ :</label>
+            <input type="text" style="width: 100%">
+            <label></label>
+          </div>
+        </div>
+        <div class="inline fields">
+          <div class="one wide field"></div>
+          <div class="six wide field">
+            <label class="custom-label-w-18">(</label>
+            <input type="text" style="width: 100%">
+            <label></label>
+          </div>
+          <div class="two wide field">
+            <label>)&nbsp; </label>
+          </div>
+          <div class="ten wide field"></div>
+        </div>
+        <br>
+
+        <div class="inline fields">
+          <div class="one wide field">
+            &nbsp;
+            <label> เสนอ :</label>
+          </div>
+          <div class="five wide field">
+            <input type="text">
+          </div>
+          <div class="nine wide field">
+            ได้ตรวจสอบแล้ว เห็นสมควรอนุมัติให้ยืมตามใบยืมฉบับนี้ได้ จำนวน 122,600.00 บาท
+          </div>
+        </div>
+        <div class="inline fields">
+          <div class="eight wide field">
+            <label class="custom-label-w-18" style="width: 17% !important;">(ตัวอักษร</label>
+            <input type="text" style="width: 100%">
+            <label></label>
+          </div>
+          <div class="two wide field">
+            <label>)&nbsp;</label>
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="one wide field">
+            <label>ลงชื่อ :</label>
+          </div>
+          <div class="four wide field">
+            <input type="text">
+          </div>
+          <div class="one wide field">
+            <label>
+              วันที่ :
+            </label>
+          </div>
+          <div class="four wide field">
+            <input type="text" class="disabled">
+          </div>
+        </div>
+        <div class="ui grid center aligned">
+          <div class="sixteen wide column">
+            <b>คำอนุมัติ</b>
+          </div>
+        </div>
+        <br>
+
+        <div class="inline fields">        
+          <div class="nine wide field">
+            อนุมัติให้ยืมตามเงื่อนไขข้างต้นได้ เป็นเงิน 122,600.00 บาท
+          </div>
+          <div class="eight wide field">
+            <label class="custom-label-w-20">(ตัวอักษร</label>
+            <input type="text" style="width: 100%">
+          </div>
+          <div class="two wide field">
+            <label>)&nbsp;</label>
+          </div>
+        </div>
+        <div class="inline fields">
+          <div class="three wide field">
+            <label>ลงชื่อผู้อนุมัติ :</label>
+          </div>
+          <div class="four wide field">
+            <input type="text">
+          </div>
+          <div class="one wide field">
+            <label>
+              วันที่ :
+            </label>
+          </div>
+          <div class="four wide field">
+            <input type="text" class="disabled">
+          </div>
+        </div>
+        <div class="ui grid center aligned">
+          <div class="sixteen wide column">
+            <b>ใบรับเงิน</b>
+          </div>
+        </div>
+        <br>
+        <div class="inline fields">    
+          <div class="four wide field">
+              ได้รับเงินยืมจำนวน 		 122,600.00 	บาท
+          </div>
+          <div class="eight wide field">
+            <label class="custom-label-w-20">(ตัวอักษร</label>
+            <input type="text" style="width: 100%">
+          </div>
+          <div class="four wide field">
+            <label>) &nbsp; ไปเป็นการถูกต้องแล้ว
+            </label>
+          </div>
+        </div>
+        <div class="inline fields">
+          <div class="three wide field">
+            <label>ลายชื่อ :</label>
+          </div>
+          <div class="four wide field">
+            <input type="text">
+          </div>
+          <div class="two wide field">
+              <label>ผู้รับเงิน </label>
+            </div>
+          <div class="one wide field">
+            <label>
+              วันที่ :
+            </label>
+          </div>
+          <div class="four wide field">
+            <input type="text" class="disabled">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
