--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-trader/working-paper-1-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-trader/working-paper-1-trader.component.html
@@ -13,7 +13,7 @@
                     </div>
                     <div class="six wide field">
                         <label class="custom-label-w-20">เลขที่วิเคราะห์ข้อมูล</label>
-                        <input value="591113-01-00001" readonly="" class="custom-readonly">
+                        <input value="{{analysNumber}}" readonly="" class="custom-readonly">
                     </div>
                 </div>
 
@@ -38,28 +38,28 @@
                     </div>
                     <div class="eight wide field">&nbsp;&nbsp;&nbsp;
                         <label class="custom-label-w-20">เลขที่กระดาษทำการ</label>
-                        <input value="591113-02-00001" readonly="" class="custom-readonly">
+                        <input value="" readonly="" class="custom-readonly">
                     </div>
                 </div>
 
                 <div class="inline fields" *ngFor="let num of _num1; let i = index" [attr.data-index]="i">
-                    <div class="three wide field">
+                    <div class="two wide field">
+                        <label>เงื่อนไขที่ &nbsp;&nbsp;{{i+1}}</label>
+                    </div>
+                    <div class="two wide field" style="padding-right: 0px;">
                         <label>จำนวนเดือนที่ชำระภาษี</label>
                     </div>
-                    <div class="one wide field">
+                    <div class="one wide field" style="padding-left: 10px; padding-right: 0px;">
                         <input type="number" name="_num1{{i}}" [(ngModel)]="_num1[i]" readonly="" class="custom-readonly">
                     </div>
                     <div class="one wide field">
-                        <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ถึง</label>
+                        <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ถึง</label>
                     </div>
                     <div class="one wide field">
                         <input type="number" name="_num2{{i}}" [(ngModel)]="_num2[i]" readonly="" class="custom-readonly">
                     </div>
-                    <div class="one wide field">
-                        &nbsp;
-                    </div>
                     <div class="four wide field">
-                        <label>ช่วงร้อยละที่ต้องการแยกกลุ่มข้อมูล</label>
+                        <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ช่วงร้อยละที่ต้องการแยกกลุ่มข้อมูล</label>
                     </div>
                     <div class="two wide field">
                         <input type="number" name="_percent1{{i}}" [(ngModel)]="_percent1[i]" readonly="" class="custom-readonly">
@@ -108,42 +108,8 @@
                             <div class="header">แยกข้อมูลตามกลุ่มของการชำระภาษี</div>
                         </div>
                         <div class="item">
-                            <div class="header">ผู้ประกอบการที่ชำระภาษีครบ 24 เดือน</div>
-                            <div class="menu">
-                                <a class="item">-อัตราการชำระภาษีเพิ่มขึ้นมากกว่าร้อยละ 5</a>
-                                <a class="item">-อัตราการชำระภาษีคงที่ (+-ไม่เกินร้อยละ 5)</a>
-                                <a class="item">-อัตราการชำระภาษีลดลงมากกว่าร้อยละ 5</a>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="header">ผู้ประกอบการที่ชำระภาษีไม่ครบ 24 เดือน</div>
-                            <div class="menu">
-                                <a class="item">-อัตราการชำระภาษีเพิ่มขึ้นมากกว่าร้อยละ 5</a>
-                                <a class="item">-อัตราการชำระภาษีเพิ่มขึ้นไม่เกินร้อยละ 5</a>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="header">ผู้ประกอบการใหม่</div>
-                            <div class="menu">
-                                <a class="item">-ผู้ประกอบการใหม่</a>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="header">สรุปจำนวนตามพิกัดสินค้า</div>
-                            <div class="menu">
-                                <a class="item">-สรุปจำนวนตามพิกัดสินค้า</a>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="header">รวมทุกกลุ่มข้อมูลและรวมพิกัดสินค้า</div>
-                            <div class="menu">
-                                <a class="item" routerLink="/summary-amount-product-trader">-รวมทุกกลุ่มข้อมูลและรวมพิกัดสินค้า</a>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="header">สร้างบันทึกข้อความขอส่งข้อมูล</div>
-                            <div class="menu">
-                                <a class="item">-สร้างบันทึกข้อความขอส่งข้อมูล</a>
+                            <div class="menu" *ngFor="let num of _num1; let i = index">
+                                <a class="item">-เงื่อนไขที่ {{i+1}}</a>
                             </div>
                         </div>
                     </div>
@@ -215,7 +181,7 @@
                 <i class="print icon"></i>
                 พิมพ์กระดาษทำการคัดเลือกราย
               </button>
-                            <button class="ui mini primary button">
+                            <button class="ui mini primary button" routerLink="/add-external-data">
                 <i class="save icon"></i>
                 บันทึกข้อมูล
               </button>
