--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -52,7 +52,7 @@
                             ค้นหา
                         </button> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         <input type="hidden" id="exciseId" value="EX" />
-                        <button id="exciseBtn" class="ui mini primary button" onclick="window.location='/#/add-data?id='+document.getElementById('exciseId').value;">
+                        <button id="exciseBtn" class="ui mini primary button" onclick="window.location='/#/add-data?id='+document.getElementById('exciseId').value+'&num=25610615-01-00330';">
                             <i class="add icon"></i>
                             เพิ่มข้อมูล
                         </button>
@@ -75,7 +75,7 @@
                     </div>
                     <div class="thirteen wide column" style="padding-top: 0">
                         <div class="ui active inverted dimmer" *ngIf="onLoading">
-                            <div class="ui text loader">กำลังโหลด...</div>
+                            <div class="ui medium text loader">กำลังโหลด...</div>
                         </div>
                         <div style="overflow-x: scroll;overflow-y: hidden;padding-bottom: 14px;">
                             <table id="userManagementDt" class="ui small celled table aligned hover" style="width: 5000px;">
