--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2.component.html
@@ -29,7 +29,9 @@
             </label>
           </div>
           <div class="four  wide field">
-            <input type="text">
+            <label>
+              .....................................................................
+            </label>
           </div>
         </div>
         <div class="inline fields">
@@ -40,7 +42,9 @@
             </label>
           </div>
           <div class="four  wide field">
-            <input type="text">
+            <label>
+              .....................................................................
+            </label>
           </div>
         </div>
 
@@ -189,13 +193,15 @@
             <label>)&nbsp;</label>
           </div>
         </div>
-
+<br>
         <div class="inline fields">
           <div class="one wide field">
             <label>ลงชื่อ :</label>
           </div>
           <div class="four wide field">
-            <input type="text">
+            <label>
+              .....................................................................
+            </label>
           </div>
           <div class="one wide field">
             <label>
@@ -203,7 +209,9 @@
             </label>
           </div>
           <div class="four wide field">
-            <input type="text" class="disabled">
+            <label>
+              .....................................................................
+            </label>
           </div>
         </div>
         <div class="ui grid center aligned">
@@ -225,12 +233,15 @@
             <label>)&nbsp;</label>
           </div>
         </div>
+        <br>
         <div class="inline fields">
-          <div class="three wide field">
+          <div class="two wide field">
             <label>ลงชื่อผู้อนุมัติ :</label>
           </div>
           <div class="four wide field">
-            <input type="text">
+            <label>
+              .....................................................................
+            </label>
           </div>
           <div class="one wide field">
             <label>
@@ -238,7 +249,9 @@
             </label>
           </div>
           <div class="four wide field">
-            <input type="text" class="disabled">
+            <label>
+              .....................................................................
+            </label>
           </div>
         </div>
         <div class="ui grid center aligned">
@@ -260,12 +273,15 @@
             </label>
           </div>
         </div>
+        <br>
         <div class="inline fields">
-          <div class="three wide field">
+          <div class="two wide field">
             <label>ลายชื่อ :</label>
           </div>
           <div class="four wide field">
-            <input type="text">
+            <label>
+              .....................................................................
+            </label>
           </div>
           <div class="two wide field">
               <label>ผู้รับเงิน </label>
@@ -276,7 +292,9 @@
             </label>
           </div>
           <div class="four wide field">
-            <input type="text" class="disabled">
+            <label>
+              .....................................................................
+            </label>
           </div>
         </div>
       </div>
