--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.css
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.css
@@ -25,3 +25,18 @@
 #tableSetting tr td:nth-child(6) {
     text-align: right;
 }
+
+@media only screen and (max-width: 1172px) {
+    .vertical.mini.animated {
+        padding-right: 16.500px !important;
+    }
+} 
+
+@media only screen and (max-width: 768px) {
+    .condition{
+        margin-top: 0 !important;
+    }
+    .ani-icon{
+        margin-left: -0.65em !important;
+    }
+}
