--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -93,12 +93,38 @@
         ตรวจสอบภาษี
         <i class="dropdown icon"></i>
         <div class="menu">
-            <!-- <a class="item" [routerLink]="['/analysis']" routerLinkActive="active">วิเคราะห์ข้อมูลเบื้องต้น(OLD)</a> -->
-            <a class="item" [routerLink]="['/trader-selection']" routerLinkActive="active">ระบบคัดเลือกราย</a>
-            <!-- /tax-audit-operation -->
-            <a class="item" [routerLink]="['/analysis']" routerLinkActive="active">ปฏิบัติการตรวจสอบภาษี</a>
-            <a class="item" [routerLink]="['/tax-audit-reporting']" routerLinkActive="active">รายงานผลการตรวจสอบภาษี</a>
-            <a class="item" [routerLink]="['/tax-audit-manage']" routerLinkActive="active">จัดทำบันทึกข้อความ หนังสือราชการ</a>
+            <div class="ui dropdown item" routerLinkActive="active">
+                <i class="dropdown icon"></i>การคัดเลือกราย
+                <div class="menu">
+                    <a class="item" [routerLink]="['/trader-selection']" routerLinkActive="active">สร้างกระดาษทำการคัดเลือกราย</a>
+                    <a class="item" [routerLink]="['/create-working-paper-trader']" routerLinkActive="active">กำหนดเงื่อนไขเพื่อวิเคราะห์ความเสี่ยง </a>
+                    <a class="item" [routerLink]="['/working-paper-1-trader']" routerLinkActive="active">ส่งกระดาษทำการคัดเลือกราย </a>
+
+                </div>
+            </div>
+            <div class="ui dropdown item" routerLinkActive="active">
+                <i class="dropdown icon"></i>การตรวจสอบภาษี
+                <div class="menu">
+                    <a class="item" [routerLink]="['/analysis']" routerLinkActive="active">การวิเคราะห์ข้อมูลเบื้องต้น </a>
+                    <a class="item" [routerLink]="['/']" routerLinkActive="active">รวบรวมข้อมูลเบื้องต้น </a>
+                    <a class="item" [routerLink]="['/']" routerLinkActive="active">ขออนุมัติออกตรวจสอบภาษี </a>
+                    <a class="item" [routerLink]="['/']" routerLinkActive="active">สร้างกระดาษทำการตรวจสอบภาษี </a>
+                    <a class="item" [routerLink]="['/']" routerLinkActive="active">สรุปผลการตรวจสอบภาษี</a>
+                </div>
+            </div>
+            <div class="ui dropdown item" routerLinkActive="active">
+                <i class="dropdown icon"></i>รายงานผลการตรวจสอบภาษี
+                <div class="menu">
+                    <a class="item" [routerLink]="['/']" routerLinkActive="active">รายงานผลการตรวจสอบภาษี </a>
+                    <a class="item" [routerLink]="['/']" routerLinkActive="active">ติดตามผลการตรวจสอบภาษี </a>
+
+                </div>
+            </div>
+
+            <a class="item" [routerLink]="['/']" routerLinkActive="active">ทะเบียนคุมหนังสือเรียก</a>
+            <a class="item" [routerLink]="['/']" routerLinkActive="active">บันทึกข้อความ หนังสือราชการ </a>
+
+
         </div>
     </div>
     <div class="ui simple dropdown item" *ngIf="authService.getLogin()" style=" color:White ">
