--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1-1/int09-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1-1/int09-1-1.component.html
@@ -53,10 +53,10 @@
         </div>
         <div class="inline fields">
           <div class="three wide field">
-            <label>รายระเอียด :</label>
+            <label>รายละเอียด :</label>
           </div>
           <div class="eight wide field">
-            <input type="text" class="disabled" name="description">
+            <input type="text" class="disabled" (ngModel)="data.detail" name="description">
           </div>
         </div>
       </div>
@@ -64,7 +64,7 @@
 
     <br>
 
-    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+    <div class="ui top centered attached header segment" id="create" style="background: #1e83db;color: white">
       <span>สร้างกระดาษทำการประมาณการค่าใช้จ่ายในการเดินทางไปราชการ </span>
     </div>
     <br>
@@ -77,7 +77,7 @@
             <label>ชื่อ :</label>
           </div>
           <div class="four wide field">
-            <input type="text" name="name">
+            <input type="text" [(ngModel)]="data.fname" name="name" required>
           </div>
           <div class="two wide field">
             <label>
@@ -85,7 +85,7 @@
             </label>
           </div>
           <div class="four wide field">
-            <input type="text" name="lastName">
+            <input type="text" [(ngModel)]="data.lname" name="lastName" required>
           </div>
         </div>
         <div class="inline fields">
@@ -95,37 +95,37 @@
             </label>
           </div>
           <div class="four  wide field">
-            <input type="text" name="position">
+            <input type="text" [(ngModel)]="data.position" name="position">
           </div>
         </div>
 
         <div class="inline fields">
-          <div class="two wide field"><label>ประเภท</label></div>
+          <div class="two wide field">
+            <label>ประเภท</label>
+          </div>
           <div class="five wide field">
-            <select style="width: 100%" id="category" name="category" class="ui search dropdown" (change)="onSelectDoc($event)" required>
+            <select style="width: 100%" id="category" name="category" class="ui search dropdown" [(ngModel)]="data.typeOf" required>
               <option value="" style="color: grey">เลือกประเภท</option>
-              <option *ngFor="let typeDoc of typeDocs; let i = index" value="{{i}}">
-                {{typeDoc}}
-              </option>
+              <option value="1">1</option>
             </select>
           </div>
-          <div class="two wide field"><label>ระดับ</label></div>
+          <div class="two wide field">
+            <label>ระดับ</label>
+          </div>
           <div class="five wide field">
-            <select style="width: 100%" id="degree" name="degree" class="ui search dropdown" (change)="onSelectTop($event)" required>
+            <select style="width: 100%" id="degree" name="degree" class="ui search dropdown" [(ngModel)]="data.levelOf" required>
               <option value="" style="color: grey">เลือกระดับ</option>
-              <option *ngFor="let top of topic; let i = index" value="{{i}}">
-                {{top}}
-              </option>
+              <option value="1">1</option>
             </select>
           </div>
-         <div class="five wide field"></div>
+          <div class="five wide field"></div>
         </div>
         <div class="inline fields">
           <div class="two wide field">
             <label>ค่าเบี้ยเลี้ยง (วัน):</label>
           </div>
           <div class="four wide field">
-            <input type="text" name="allowanceDate">
+            <input type="text" [(ngModel)]="data.allowance" name="allowanceDate">
           </div>
           <div class="two wide field">
             <label>
@@ -133,7 +133,7 @@
             </label>
           </div>
           <div class="four wide field">
-            <input type="text" name="rentDate">
+            <input type="text" [(ngModel)]="data.accommodation" name="rentDate">
           </div>
         </div>
         <div class="inline fields">
@@ -141,7 +141,7 @@
             <label>ค่าพาหนะ :</label>
           </div>
           <div class="four wide field">
-            <input type="text" name="travelCost">
+            <input type="text" [(ngModel)]="data.passage" name="travelCost">
           </div>
           <div class="two wide field">
             <label>
@@ -149,7 +149,7 @@
             </label>
           </div>
           <div class="four wide field">
-            <input type="text" name="otherCost">
+            <input type="text" [(ngModel)]="data.outgoings" name="otherCost">
           </div>
         </div>
 
@@ -160,7 +160,7 @@
             </label>
           </div>
           <div class="ten wide field">
-            <textarea name="" id="" rows="2" style="resize: none" maxLength="2000" name="note"></textarea>
+            <textarea name="" id="" rows="2" [(ngModel)]="data.note" style="resize: none" maxLength="2000" name="note"></textarea>
           </div>
         </div>
       </div>
@@ -169,7 +169,7 @@
 
     <div class="ui center aligned grid">
       <div class="eight wide column">
-        <button class="ui mini green button" type="button" (click)="uploadData()">
+        <button class="ui mini green button" type="button" (click)="addData()">
           เพิ่ม
         </button>
         <button class="ui mini red button" type="button" (click)="clearData()">
@@ -179,52 +179,73 @@
     </div>
     <br>
 
-   
-      <br>
-      <div style="overflow-x: scroll;">
-        <table id="tableData" class="ui small celled table" style="width: 120%">
-          <thead>
-            <tr style="text-align: center;">
-              <th rowspan="2">ที่</th>
-              <th rowspan="2">ชื่อ</th>
-              <th rowspan="2">ตำแหน่ง</th>
-              <th colspan="2">ค่าเบี้ยเลี้ยง</th>
-              <th colspan="2">ค่าเช่าที่พัก</th>
-              <th rowspan="2">ค่าพาหนะ</th>
-              <th rowspan="4">ค่าใช้จ่ายอื่น</th>
-              <th rowspan="2">รวมเป็นเงิน</th>
-              <th rowspan="2">หมายเหตุ</th>
-              <th rowspan="2">Action</th>
-            </tr>
-            <tr style="text-align: center;">
-              <th>วัน</th>
-              <th>จำนวนเงิน</th>
-              <th>วัน</th>
-              <th>จำนวนเงิน</th>
-            </tr>
-          </thead>
-          <tbody>
 
-
-          </tbody>
-        </table>
-      </div>
-      <br>
-      <div class="ui center aligned grid">
-        <div class="eight wide column">
-          <button class="ui mini red button">
-            ลบ
-          </button>
-          <button class="ui mini primary button" type="submit" (click)=" onSubmit()">
-            บันทึก
-          </button>                    
-          <button class="ui mini primary button">
-            ส่งออก
-          </button>
-          <button class="ui mini primary button" routerLink="/int09-2">
-            สัญญาการยืมเงิน
-          </button>
-        </div>
+    <br>
+    <div style="overflow-x: scroll;">
+      <table id="tableData" class="ui small celled table" style="width: 120%">
+        <thead>
+          <tr style="text-align: center;">
+            <th rowspan="2"></th>
+            <th rowspan="2">ที่</th>
+            <th rowspan="2">ชื่อ</th>
+            <th rowspan="2">ตำแหน่ง</th>
+            <th colspan="2">ค่าเบี้ยเลี้ยง</th>
+            <th colspan="2">ค่าเช่าที่พัก</th>
+            <th rowspan="2">ค่าพาหนะ</th>
+            <th rowspan="2">ค่าใช้จ่ายอื่น</th>
+            <th rowspan="2">รวมเป็นเงิน</th>
+            <th rowspan="2">หมายเหตุ</th>
+            <th rowspan="2">Action</th>
+          </tr>
+          <tr style="text-align: center;">
+            <th>วัน</th>
+            <th>จำนวนเงิน</th>
+            <th>วัน</th>
+            <th>จำนวนเงิน</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let d of allData; let i = index">
+            <td>
+              <div class="ui fitted checkbox">
+                <input (change)="selectedBox($event, i)" name="checked{{i}}" type="checkbox">
+                <label></label>
+              </div>
+            </td>
+            <td>{{i+1}}</td>
+            <td>{{d.fname}} {{d.lname}}</td>
+            <td>{{d.position}}</td>
+            <td>2</td>
+            <td>{{d.allowance}}</td>
+            <td>2</td>
+            <td>{{d.accommodation}}</td>
+            <td>{{d.passage}}</td>
+            <td>{{d.outgoings}}</td>
+            <td>{{total(i)}}</td>
+            <td>???</td>
+            <td>
+              <button class="ui mini button" type="button" (click)="editData(i)">แก้ไข</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <br>
+    <div class="ui center aligned grid">
+      <div class="eight wide column">
+        <button class="ui mini red button" (click)="deleteData()">
+          ลบ
+        </button>
+        <button class="ui mini primary button" type="submit" (click)="onSubmit()">
+          บันทึก
+        </button>
+        <button class="ui mini primary button">
+          ส่งออก
+        </button>
+        <button class="ui mini primary button" routerLink="/int09-2">
+          สัญญาการยืมเงิน
+        </button>
       </div>
     </div>
   </div>
+</div>
