--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-trader/working-paper-1-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-trader/working-paper-1-trader.component.html
@@ -78,7 +78,7 @@
             <div class="ui grid">
                 <div class="three wide column" style="padding-bottom: 0"></div>
                 <div class="six wide column" style="padding-bottom: 0">
-                    <button class="ui mini primary button" routerLink="/working-paper-1-trader">
+                    <button class="ui mini primary button" >
             <i class="list icon"></i>
             แสดงข้อมูลฉบับย่อ
           </button>
