--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
@@ -15,7 +15,7 @@
                     </div>
                     <div class="six wide field">
                         <label class="custom-label-w-20">เลขที่วิเคราะห์ข้อมูล</label>
-                        <input value="" disabled="" />
+                        <input value="" readonly="" class="custom-readonly" />
                     </div>
                 </div>
 
